...
                case .failure:
                    print("Failed to load image")
                }
                
                let rating = Float(movie.rating) ?? 0
                
                let text = "Рейтинг этого фильма больше чем 7?"
                let correctAnswer = rating > 7
                
                let question = QuizQuestion(image: imageData,
                                             text: text,
                                             correctAnswer: correctAnswer)
                
...
